style.css
body {
  font-family: "Trebuchet MS", sans-serif;
  color: #272829;
  background: rgb(230, 228, 228);
}

a:hover {
  color: #474e55;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Monaco", monospace;
}

@media screen and (max-width: 768px) {
  [data-aos-delay] {
    transition-delay: 0 !important;
  }
}

#header {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  z-index: 9997;
  padding: 15px;
  overflow-y: auto;
}

@media (max-width: 992px) {
  #header {
    width: 300px;
    background: #fff;
    border-right: 1px solid #e6e9ec;
    left: -300px;
  }
}

@media (min-width: 992px) {
  #main {
    margin-left: 100px;
  }
}

.nav-link:focus {
  color: #45505b;
}

.nav-menu {
  padding: 0;
  display: block;
}

.nav-menu * {
  margin: 0;
  padding: 0;
  list-style: none;
}

.nav-menu > ul > li {
  position: relative;
  white-space: nowrap;
}

.nav-menu a {
  display: flex;
  align-items: center;
  color: #45505b;
  padding: 10px 18px;
  margin-bottom: 8px;
  transition: 0.3s;
  font-size: 15px;
  border-radius: 50px;
  background: #f2f3f5;
  height: 56px;
  width: 100%;
  overflow: hidden;
  transition: 0.3s;
}

.nav-menu a i {
  font-size: 20px;
}

.nav-menu a span {
  padding: 0 5px 0 7px;
  color: #767b80;
}

@media (min-width: 992px) {
  .nav-menu a {
    width: 56px;
  }
  .nav-menu a span {
    display: none;
    color: #fff;
  }
}

.nav-menu a:hover, .nav-menu .active, .nav-menu li:hover > a {
  color: #fff;
  background: #1f2022;
}

.nav-menu a:hover span, .nav-menu .active span, .nav-menu li:hover > a span {
  color: #fff;
}

.nav-menu a:hover, .nav-menu li:hover > a {
  width: 100%;
  color: #fff;
}

.nav-menu a:hover span, .nav-menu li:hover > a span {
  display: block;
}

#home {
  width: 100%;
  height: 100vh;
  background: url("images/devadath-background.jpg") top right no-repeat;
  background-size: cover;
  position: relative;
}

@media (min-width: 992px) {
  #home {
    padding-left: 160px;
  }
}

#home:before {
  content: "";
  background: rgba(255, 255, 255, 0.4);
  backdrop-filter: blur(5px);
  position: absolute;
  bottom: 0;
  top: 0;
  left: 0;
  right: 0;
}

#home h1 {
  margin: 0;
  font-size: 64px;
  font-weight: 700;
  line-height: 56px;
  color: #45505b;
  font-family: "Papyrus", fantasy;
}

.my-contact {
  font-family: "Papyrus", fantasy;
  padding-top: 10px;
  color: #2e3135;
  font-size: 20px;
}

.resume-download {
  padding-top: 30px;
  font-size: 20px;
}

.resume-download a {
  animation: blinker 1s linear infinite;
  text-decoration: none;
  border-bottom: 1px solid currentColor;
  color: #45505b;
}

@keyframes blinker {
  80% {
    opacity: 0.20;
  }
}

#home p {
  margin: 15px 0 0 0;
  font-size: 26px;
  font-family: "Papyrus", fantasy;
}

#home p span {
  color: #45505b;
  letter-spacing: 1px;
}

section {
  padding: 60px 0;
  overflow: hidden;
}

.section-title {
  text-align: center;
  padding-bottom: 30px;
}

.section-title h2 {
  font-size: 32px;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 20px;
  padding-bottom: 20px;
  position: relative;
  color: #45505b;
  font-family: "Monaco", monospace;
}

.section-title h2::after {
  content: '';
  position: absolute;
  display: block;
  width: 40px;
  height: 3px;
  background: #1f2022;
  bottom: 0;
  left: calc(50% - 20px);
}

.section-title p {
  margin-bottom: 0;
}

.about .information {
  margin-top: 50px;
  margin-left: 10px;
}

.about .content h3 {
  font-weight: 700;
  font-size: 26px;
  color: #728394;
}

.about .content ul {
  list-style: none;
  padding: 0;
}

.about .content ul li {
  margin-bottom: 20px;
  display: flex;
}

.about .content ul strong {
  margin-right: 10px;
}

.about .content ul i {
  font-size: 16px;
  margin-right: 5px;
  color: #1f2022;
  line-height: 0;
}

.about .content p:last-child {
  margin-bottom: 0;
}

.skill-sets ul li{
  list-style: none;
  padding: 0;
  margin-bottom: 20px;
  display: list-item;
  align-items: center;
  font-size: 16px;
  margin-right: 5px;
  color: #1f2022;
}

.skill-sets ul li strong{
  font-size: 18px;
}

.skills-expertise{
  margin-top: 40px;
}

.experience .experience-title {
  font-size: 26px;
  font-weight: 700;
  margin-top: 20px;
  margin-bottom: 20px;
  color: #45505b;
}

.experience .experience-item {
  padding: 0 0 20px 20px;
  margin-top: -2px;
  position: relative;
}

.experience .experience-item h4 {
  line-height: 18px;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
  color: #1f2022;
  margin-bottom: 15px;
}

.experience .experience-item p {
  padding-left: 10px;
}

.experience .experience-item ul {
  padding-left: 30px;
}

.experience .experience-item ul li {
  padding-bottom: 10px;
  margin-right: 20px;
}

.education-item {
  padding: 0 0 20px 20px;
  margin-top: -2px;
  position: relative;
}

.education-item h4 {
  line-height: 18px;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
  color: #1f2022;
  margin-bottom: 15px;
}

.education-item p {
  padding-left: 20px;
  margin-right: 20px;
}

.projects-item {
  padding: 0 0 20px 20px;
  margin-top: -2px;
  position: relative;
}

.projects-item p {
  margin-right: 50px;
}

.accomplishments-item {
  padding: 0 0 20px 20px;
  margin-top: -2px;
  position: relative;
}

.accomplishments-item a {
  text-decoration: none;
  border-bottom: 1px solid currentColor;
  color: #45505b;
}

.accomplishments-item a:link, a:visited {
  color: #45505b;
}
.accomplishments-item a:hover {
  color: #8b8d8f;
}

.accomplishments-item p {
  margin-right: 50px;
  padding-bottom: 0;
}

#contact {
  background: #b6b7b8;
  color: #45505b;
  font-size: 14px;
  text-align: center;
  padding: 50px 0;
}

#contact h3 {
  font-size: 50px;
  font-weight: 900;
  font-family: "Papyrus", fantasy;
  padding: 0;
  text-align: center;
}

#contact .social-links {
  margin: 15px 0 25px 0;
}

#contact .social-links a {
  font-size: 18px;
  display: inline-block;
  background: #1f2022;
  color: #fff;
  line-height: 1;
  padding: 8px 0;
  margin-right: 4px;
  border-radius: 50%;
  text-align: center;
  width: 36px;
  height: 36px;
  transition: 0.3s;
}

#contact .social-links a:hover {
  background: #595c5f;
  color: #fff;
  text-decoration: none;
}

#contact .copyright {
  margin: 0 0 5px 0;
}

#contact .phone-number, #contact .email-id, #contact .current-address {
  font-size: 13px;
  margin-top: 5px;
}

.technology-logos{
  padding: 30px 0 0 0;
}

.technology-logos i{
  padding-right: 35px;
}

